kubernetes/apps/apps/dashboard/dashboard/app/dashboard-middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: dashboard-basicauth
spec:
  basicAuth:
    secret: dashboard-auth
