kubernetes/apps/apps/dashboard/dashboard/app/dashboard-deployment.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/master/deployment.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name dashboard-homepage
  labels:
    app: *name
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: *name
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: *name
    spec:
      containers:
        - image: ghcr.io/gethomepage/homepage:v2.4.0
          name: *name
          ports:
          - containerPort: 3000
            name: http
            protocol: TCP
          resources:
            requests:
              cpu: 1m
              memory: 1M
            limits:
              cpu: 500m
              memory: 250M
          livenessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 5
          volumeMounts:
            - mountPath: /app/config/settings.yaml
              name: dashboard-homepage-settings
              subPath: settings.yaml
            - mountPath: /app/config/bookmarks.yaml
              name: dashboard-homepage-bookmarks
              subPath: bookmarks.yaml
            - mountPath: /app/config/docker.yaml
              name: dashboard-homepage-docker
              subPath: docker.yaml
            - mountPath: /app/config/kubernetes.yaml
              name: dashboard-homepage-kubernetes
              subPath: kubernetes.yaml
            - mountPath: /app/config/widgets.yaml
              name: dashboard-homepage-widgets
              subPath: widgets.yaml
            - mountPath: /app/config/services.yaml
              name: dashboard-homepage-services
              subPath: services.yaml
      restartPolicy: Always
      volumes:
        - name: dashboard-homepage-services
          configMap:
            name: dashboard-homepage-services
        - name: dashboard-homepage-bookmarks
          configMap:
            name: dashboard-homepage-bookmarks
        - name: dashboard-homepage-docker
          configMap:
            name: dashboard-homepage-docker
        - name: dashboard-homepage-kubernetes
          configMap:
            name: dashboard-homepage-kubernetes
        - name: dashboard-homepage-widgets
          configMap:
            name: dashboard-homepage-widgets
        - name: dashboard-homepage-settings
          configMap:
            name: dashboard-homepage-settings
status: {}
