kubernetes/apps/apps/dashboard/dashboard/app/dashboard-ingress.yaml
# ---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: dashboard-homepage-cloud
#   annotations:
#     kubernetes.io/ingress.class: traefik
# spec:
#   entryPoints:
#     - websecure
#   routes:
#     - match: Host(`dashboard.cloud.icylair.com`)
#       kind: Rule
#       services:
#         - name: dashboard-homepage
#           port: 3000
#           namespace: dashboard
#       middlewares:
#         - name: dashboard-basicauth
#           namespace: dashboard
#   tls:
#     secretName: cloud-icecoldlair-com-staging
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app dashboard-homepage-cloud
  # labels:
  #   nginx.ingress.kubernetes.io/enable-opentelemetry: "true"
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: network-oidc-auth@kubernetescrd
spec:
  ingressClassName: traefik-external
  rules:
    - host: &host dashboard.cloud.icylair.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard-homepage
                port:
                  number: 3000
  tls:
  - hosts:
      - dashboard.cloud.icylair.com
    secretName: icylair-com-all-prod
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: &app dashboard-homepage-cloud-auth
#   labels:
#     # app.kubernetes.io/name: *app
#     # app.kubernetes.io/instance: *app
#     # kubernetes.io/ingress.class: traefik
#     kubernetes.io/ingress.class: traefik
#   annotations:
#     traefik.ingress.kubernetes.io/router.middlewares: network-oidc-auth@kubernetescrd
#     # traefik.ingress.kubernetes.io/router.middlewares: observability-test-apikey@kubernetescrd
# spec:
#   ingressClassName: traefik-external
#   rules:
#     - host: &host dashboard-auth.cloud.icylair.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: dashboard-homepage
#                 port:
#                   number: 3000
#   tls:
#   - hosts:
#       - dashboard-auth.cloud.icylair.com
#     secretName: icylair-com-all-prod
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: &app dashboard-homepage-cloud-nginx
#   namespace: dashboard
#   labels:
#     app.kubernetes.io/name: *app
#     app.kubernetes.io/instance: *app
# spec:
#   # type: ExternalName
#   # externalName: valetudo.turbo.ac.
#   selector:
#     app: dashboard-homepage
#   ports:
#     - name: http
#       port: &port 3000
#       protocol: TCP
#       targetPort: *port
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: &app dashboard-homepage-cloud-nginx
#   namespace: networking
#   labels:
#     app.kubernetes.io/name: *app
#     app.kubernetes.io/instance: *app
#     kubernetes.io/ingress.class: nginx
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: &host dashboard2.cloud.icylair.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: *app
#                 port:
#                   number: 80
#   tls:
#     - hosts:
#         - cloud-icecoldlair-com-staging
